--- a/DB.conf
+++ b/DB.conf
@@ -1,4 +1,17 @@
-localhost:80
-Movielens
+**dati database2**
+localhost
+Movielens2
+root
+storm
+
+**dati database3**
+localhost
+Movielens3
+root
+storm
+
+**dati database4**
+localhost
+Movielens4
 root
 storm
